# hri_class

./: drunk_demo.ogv  out-2.ogv
drunk_tbot/: CMakeLists.txt  README.md  package.xml  turn_white_background.sh
drunk_tbot/include/: drunk_cmd.h
drunk_tbot/src/: drunk_cmd.cpp
social_tbot/: CMakeLists.txt  README.md  package.xml
social_tbot/include/: social_cmd.h  social_tbot.h
social_tbot/src/: social_tbot.cpp
speech/: .gitignore  README.md
speech/hlpr_speech2/hlpr_speech_recognition/data/: kps.dic  kps.lm  kps.map  kps.txt  kps.yaml
speech/hlpr_speech2/hlpr_speech_recognition/launch/: speech_listener.launch
speech/pocketsphinx/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
speech/pocketsphinx/autom4te.cache/: output.1  requests  traces.0  traces.1
speech/pocketsphinx/doc/: Makefile  Makefile.in
speech/pocketsphinx/include/: Makefile  Makefile.in
speech/pocketsphinx/model/: Makefile  Makefile.in
speech/pocketsphinx/src/: Makefile  Makefile.in
speech/pocketsphinx/src/gst-plugin/: Makefile  Makefile.in
speech/pocketsphinx/swig/: Makefile  Makefile.in
speech/pocketsphinx/test/: Makefile  Makefile.in  testfuncs.sh
speech/sphinxbase/: Makefile  config.status  configure  libtool
speech/sphinxbase/autom4te.cache/: output.0  requests  traces.0
speech/sphinxbase/doc/: Makefile
speech/sphinxbase/include/: Makefile
speech/sphinxbase/src/: Makefile
speech/sphinxbase/swig/: Makefile
speech/sphinxbase/test/: Makefile
speech_controlled_tbot/: CMakeLists.txt  README.md  documentation.txt  ignore_package.xml
speech_controlled_tbot/src/: speech_tbot.cpp
(+370 files in other folders)
